Bug 341859 - can't change or modify web shortcuts provided by default
Summary: can't change or modify web shortcuts provided by default
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-13 22:30 UTC by ignacio rodríguez
Modified: 2021-07-24 00:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ignacio rodríguez 2014-12-13 22:30:28 UTC
I want to customize the web shortcuts provided by default. Now, i can't change any of them.
For example, facebook shortcut it's not working, and i want to fix it, but when i put the right URI and click Apply, nothing changes. 

The same thing happens when i try to remove the large amount of web shortcuts that come by default. After i click accept, they come back.

Reproducible: Always

Steps to Reproduce:
1.Open "Web shortcuts"
2.Remove or modify any web shortcut provided
3.Apply


Actual Results:  
Nothing changes

Expected Results:  
Web shortcut changes

I am using Plasma 5, on Manjaro Linux
Comment 1 Vishesh Handa 2015-01-08 13:33:24 UTC
Hi. Could you please let me know how you changed the web shortcuts? I don't see any configuration option.
Comment 2 Vishesh Handa 2015-01-08 13:39:25 UTC
Confirmed. The WebShortcuts KCM isn't functioning properly.
Comment 3 Eike Hein 2015-01-08 13:41:23 UTC
I ported this. It seemed to work back then. WIll have a look.
Comment 4 Eike Hein 2015-01-08 19:27:46 UTC
Git commit 683ce610128c30be6ae303a1a24d7b6f6c35b763 by Eike Hein.
Committed on 08/01/2015 at 19:26.
Pushed by hein into branch 'master'.

Fix editing web shortcuts.
Change-Id: Iab830416d2671670dcd9bfdb56c6da9d1e66c81c

M  +1    -1    src/urifilters/ikws/searchproviderdlg.cpp
M  +3    -1    src/urifilters/ikws/searchproviderdlg.h

http://commits.kde.org/kio/683ce610128c30be6ae303a1a24d7b6f6c35b763
Comment 5 Paul 2015-03-18 14:16:54 UTC
This issue isn't fixed for me.
In both frameworks 5.7 and 5.8, if I add a web shortcut, close the kcm window, and go back, the shortcut is gone.
Is this working for anyone else?
Comment 6 Eike Hein 2015-03-18 14:20:09 UTC
^ Looks like that's a separate issue, the older problem was the shortcut not actually making it to the listview.
Comment 7 Eike Hein 2015-03-18 16:10:07 UTC
Git commit 45b60ad7b5f3edccb671f9d5e84379d6954f880a by Eike Hein.
Committed on 18/03/2015 at 16:08.
Pushed by hein into branch 'master'.

Add missing slashes to write paths in the urifilter KCM.

M  +1    -1    src/urifilters/ikws/ikwsopts.cpp
M  +1    -1    src/urifilters/ikws/searchprovider.cpp

http://commits.kde.org/kio/45b60ad7b5f3edccb671f9d5e84379d6954f880a
Comment 8 Paul 2015-03-18 16:14:33 UTC
Thank you, Eike.
Comment 9 Eike Hein 2015-03-18 16:20:15 UTC
No problem - I didn't notice because I only tested editing web shortcuts; adding one involves writing out a new file, which was being done to the wrong location (in code I didn't port personally).