Add missing slashes to write paths in the urifilter KCM.

BUG:341859